--- a/jpa-services/pom.xml
+++ b/jpa-services/pom.xml
@@ -28,7 +28,7 @@
     </dependency>
     <dependency>
       <groupId>org.ihtsdo.otf.term-server</groupId>
-      <artifactId>term-server-parents</artifactId>
+      <artifactId>term-server-services</artifactId>
     </dependency>
 
     <!-- JPA dependencies -->
