--- a/services/pom.xml
+++ b/services/pom.xml
@@ -10,7 +10,7 @@
     <relativePath>../parent</relativePath>
   </parent>
 
-  <artifactId>term-server-parents</artifactId>
+  <artifactId>term-server-services</artifactId>
   <name>OTF RF2 ervices</name>
   <description>Conceptual model of OTF RF2 term-server services</description>
 
