--- a/admin/mojo/pom.xml
+++ b/admin/mojo/pom.xml
@@ -29,7 +29,7 @@
     </dependency>
     <dependency>
       <groupId>org.ihtsdo.otf.term-server</groupId>
-      <artifactId>term-server-parents</artifactId>
+      <artifactId>term-server-services</artifactId>
     </dependency>
     <dependency>
       <groupId>org.ihtsdo.otf.term-server</groupId>
