--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Mapping REST Services</display-name>
+  <display-name>Terminology Server REST Services</display-name>
 
   <!-- Jersey configuration -->
   <servlet>
@@ -28,7 +28,7 @@
       <!-- This URL is the path to the REST web service itself. In the index.html 
         page is the path to the api-docs page -->
       <param-name>swagger.api.basepath</param-name>
-      <param-value>/mapping-rest</param-value>
+      <param-value>/term-server-rest</param-value>
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
