--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>jpa-services</module>
     <module>rest</module>
     <module>admin</module>
+    <module>integration-test</module>
   </modules>
 
   <distributionManagement>
