Enhancements to include client, fixes to security.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>rest</module>
     <module>admin</module>
     <module>integration-test</module>
+    <module>rest-client</module>
   </modules>
 
   <distributionManagement>
