--- a/admin/mojo/pom.xml
+++ b/admin/mojo/pom.xml
@@ -11,8 +11,8 @@
   </parent>
 
   <artifactId>term-server-admin-mojo</artifactId>
-  <name>OTF RF2 Admin Mojos</name>
-  <description>OTF RF2 Administrator Mojos</description>
+  <name>Terminology server admin mojos.</name>
+  <description>Implementations for the admin tool configurations.</description>
   <packaging>maven-plugin</packaging>
 
   <!-- Declare Project Dependency Versions -->
