--- a/admin/remover/pom.xml
+++ b/admin/remover/pom.xml
@@ -11,8 +11,8 @@
   </parent>
 
   <artifactId>term-server-admin-remover</artifactId>
-  <name>OTF Admin Terminology Remover</name>
-  <description>OTF Administrator Tool to Remove Terminology data</description>
+  <name>Terminology server admin remover tool.</name>
+  <description>Used to remove loaded terminologies from the database.</description>
   <packaging>pom</packaging>
 
 
