--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>term-server-integration-test</artifactId>
-  <name>Terminology server integration test module</name>
+  <name>Terminology server integration test module.</name>
   <description>Performs integration tests given a test configuration and a running service.</description>
 
   <!-- Declare Project Dependency Versions -->
