--- a/jpa-services/pom.xml
+++ b/jpa-services/pom.xml
@@ -11,8 +11,8 @@
   </parent>
 
   <artifactId>term-server-jpa-services</artifactId>
-  <name>OTF RF2 Services JPA implementation</name>
-  <description>JPA implementation of OTF RF2 term-server services</description>
+  <name>Termionlogy server JPA service implementations. </name>
+  <description>JPA implementations of terminology services.</description>
 
   <!-- Declare Project Dependency Versions -->
   <dependencies>
