--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>com.fasterxml.jackson.jaxrs.json;org.ihtsdo.otf.ts.rest.impl;org.ihtsdo.otf.ts.model;org.ihtsdo.otf.ts.rf2;org.ihtsdo.otf.ts.rf2.jpa;com.wordnik.swagger.jersey.listing</param-value>
+      <param-value>com.fasterxml.jackson.jaxrs.json;org.ihtsdo.otf.ts.services.helpers;org.ihtsdo.otf.ts.rest.impl;org.ihtsdo.otf.ts.model;org.ihtsdo.otf.ts.rf2;org.ihtsdo.otf.ts.rf2.jpa;com.wordnik.swagger.jersey.listing</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
