--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.ihtsdo.otf.term-server</groupId>
+      <artifactId>term-server-model</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
