--- a/admin/mojo/pom.xml
+++ b/admin/mojo/pom.xml
@@ -15,7 +15,7 @@
   <description>Implementations for the admin tool configurations.</description>
   <packaging>maven-plugin</packaging>
 
-  <!-- Declare Project Dependency Versions -->
+  <!-- Dependencies -->
   <dependencies>
 
     <!-- Model interfaces. -->
@@ -69,10 +69,14 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
+    
+    <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
     </dependency>
+
+    <!-- Maven Plugin API -->
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
