--- a/admin/qa/pom.xml
+++ b/admin/qa/pom.xml
@@ -1,73 +1,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<!-- Module Metadata -->
-	<parent>
-		<groupId>org.ihtsdo.otf.term-server</groupId>
-		<artifactId>term-server-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../parent</relativePath>
-	</parent>
+  <!-- Module Metadata -->
+  <parent>
+    <groupId>org.ihtsdo.otf.term-server</groupId>
+    <artifactId>term-server-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../../parent</relativePath>
+  </parent>
 
-	<artifactId>term-server-admin-qa</artifactId>
-	<name>Terminology server admin QA tool.</name>
-	<description>Used for performing system wide QA checks</description>
-	<packaging>pom</packaging>
+  <artifactId>term-server-admin-qa</artifactId>
+  <name>Terminology server admin QA tool.</name>
+  <description>Used for performing system wide QA checks</description>
+  <packaging>pom</packaging>
 
-	<profiles>
+  <profiles>
 
-		<!-- QA Workflow for project -->
-		<profile>
-			<id>Workflow</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.ihtsdo.otf.term-server</groupId>
-						<artifactId>term-server-admin-mojo</artifactId>
-						<version>${project.version}</version>
-						<executions>
-							<execution>
-								<id>qa-workflow</id>
-								<phase>package</phase>
-								<goals>
-									<goal>qa-workflow</goal>
-								</goals>
-								<configuration>
-									<refSetId>${refset.id}</refSetId>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		
-		<!-- QA Map Groups for project -->
-		<profile>
-			<id>MapGroups</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.ihtsdo.otf.term-server</groupId>
-						<artifactId>term-server-admin-mojo</artifactId>
-						<version>${project.version}</version>
-						<executions>
-							<execution>
-								<id>qa-map-groups</id>
-								<phase>package</phase>
-								<goals>
-									<goal>qa-map-groups</goal>
-								</goals>
-								<configuration>
-									<refSetId>${refset.id}</refSetId>
-									<mode>${mode}</mode>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+    <!-- QA database structures - run a series of query validations, specify -Drun.config-... -->
+    <!-- TODO: this needs to be implemented -->
+    <profile>
+      <id>QaDatabase</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.ihtsdo.otf.term-server</groupId>
+            <artifactId>term-server-admin-mojo</artifactId>
+            <version>${project.version}</version>
+            <executions>
+              <execution>
+                <id>qa-database</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>qa-database</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+  </profiles>
 </project>
