--- a/admin/remover/pom.xml
+++ b/admin/remover/pom.xml
@@ -18,7 +18,7 @@
 
   <profiles>
 
-    <!-- Remove SNOMED -->
+    <!-- Remove SNOMED, specify -Drun.config=... -->
     <profile>
       <id>SNOMEDCT</id>
       <build>
@@ -44,33 +44,7 @@
       </build>
     </profile>
 
-    <!-- Remove SNOMED tree positions only -->
-    <profile>
-      <id>SNOMEDCT-treepos</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.ihtsdo.otf.term-server</groupId>
-            <artifactId>term-server-admin-mojo</artifactId>
-            <version>${project.version}</version>
-            <executions>
-              <execution>
-                <id>remove-snomed-treepos</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>remove-snomed-treepos</goal>
-                </goals>
-                <configuration>
-                  <terminology>SNOMEDCT</terminology>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Remove ICD10 -->
+    <!-- Remove ICD10, specify -Drun.config=... -->
     <profile>
       <id>ICD10</id>
       <build>
@@ -96,7 +70,7 @@
       </build>
     </profile>
 
-    <!-- Remove ICD9CM -->
+    <!-- Remove ICD9CM, specify -Drun.config=... -->
     <profile>
       <id>ICD9CM</id>
       <build>
@@ -122,7 +96,7 @@
       </build>
     </profile>
 
-    <!-- Remove ICPC -->
+    <!-- Remove ICPC, specify -Drun.config=... -->
     <profile>
       <id>ICPC</id>
       <build>
@@ -140,107 +114,6 @@
                 </goals>
                 <configuration>
                   <terminology>ICPC</terminology>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Remove map project data -->
-    <profile>
-      <id>MapProjectData</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.ihtsdo.otf.term-server</groupId>
-            <artifactId>term-server-admin-mojo</artifactId>
-            <version>${project.version}</version>
-            <executions>
-              <execution>
-                <id>remove-map-projects</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>remove-map-projects</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Remove map notes -->
-    <profile>
-      <id>MapNotes</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.ihtsdo.otf.term-server</groupId>
-            <artifactId>term-server-admin-mojo</artifactId>
-            <version>${project.version}</version>
-            <executions>
-              <execution>
-                <id>remove-map-notes</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>remove-map-notes</goal>
-                </goals>
-                <configuration>
-                  <refSetId>${refset.id}</refSetId>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Remove Map records -->
-    <profile>
-      <id>MapRecords</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.ihtsdo.otf.term-server</groupId>
-            <artifactId>term-server-admin-mojo</artifactId>
-            <version>${project.version}</version>
-            <executions>
-              <execution>
-                <id>remove-map-records</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>remove-map-records</goal>
-                </goals>
-                <configuration>
-                  <refSetId>${refset.id}</refSetId>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Clear workflo -->
-    <profile>
-      <id>ClearWorkflow</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.ihtsdo.otf.term-server</groupId>
-            <artifactId>term-server-admin-mojo</artifactId>
-            <version>${project.version}</version>
-            <executions>
-              <execution>
-                <id>clear-workflow</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>clear-workflow</goal>
-                </goals>
-                <configuration>
-                  <refSetId>${refset.id}</refSetId>
                 </configuration>
               </execution>
             </executions>
