Improvements to model and loaders and configurability.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -228,6 +228,13 @@
     <pluginManagement>
       <plugins>
 
+        <!-- Maven plugins -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.7</version>
+        </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
