--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -165,6 +165,44 @@
         </executions>
       </plugin>
 
+     <!-- Copy files -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+
+          <!-- Copy the favicon file -->
+          <execution>
+            <id>copy-favicon</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target name="copy favicon">
+                <copy file="${deploy.favicon}" overwrite="true"
+                  tofile="${project.build.directory}/custom/images/favicon.png" />
+              </target>
+            </configuration>
+          </execution>
+
+          <!-- Copy the logo file -->
+          <execution>
+            <id>copy-logo</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target name="copy logo">
+                <copy file="${deploy.favicon}" overwrite="true"
+                  tofile="${project.build.directory}/custom/images/logo.png" />
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <!-- Configure .war settings -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -173,6 +211,9 @@
           <warName>term-server-rest</warName>
           <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
           <webResources>
+            <resource>
+              <directory>${project.build.directory}/custom</directory>
+            </resource>
             <resource>
               <directory>src/main/webapp</directory>
               <filtering>true</filtering>
@@ -192,5 +233,34 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <versionRange>[1.7,)</versionRange>
+                    <goals>
+                      <goal>run</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
