--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -41,7 +41,7 @@
     <slf4j.log4j12.version>1.7.5</slf4j.log4j12.version>
     <maven.plugin.api.version>3.1.1</maven.plugin.api.version>
     <jersey.version>1.17.1</jersey.version>
-
+    <apache.commons.lang3.version>3.3.2</apache.commons.lang3.version>
     <jettison.version>1.1</jettison.version>
     <jsr311-api.version>1.1.1</jsr311-api.version>
     <asm.version>3.1</asm.version>
@@ -216,6 +216,13 @@
         <groupId>com.sun.mail</groupId>
         <artifactId>javax.mail</artifactId>
         <version>${javax.mail.version}</version>
+      </dependency>
+
+      <!-- Apache commons-lang3 - for FastDateTime -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${apache.commons.lang3.version}</version>
       </dependency>
 
     </dependencies>
