--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -48,6 +48,7 @@
     <jackson-2.version>2.3.0</jackson-2.version>
     <swagger.version>1.3.0</swagger.version>
     <junit.version>4.11</junit.version>
+    <cglib.version>2.2.2</cglib.version>
     <javax.mail.version>1.5.2</javax.mail.version>
   </properties>
 
@@ -211,6 +212,11 @@
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
       </dependency>
+      <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib</artifactId>
+        <version>${cglib.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>com.sun.mail</groupId>
@@ -304,6 +310,7 @@
           <artifactId>truezip-maven-plugin</artifactId>
           <version>${truezip.maven.version}</version>
         </plugin>
+
 
       </plugins>
     </pluginManagement>
