--- a/rest-client/pom.xml
+++ b/rest-client/pom.xml
@@ -27,7 +27,7 @@
       <groupId>org.ihtsdo.otf.term-server</groupId>
       <artifactId>term-server-services</artifactId>
     </dependency>
-    
+
     <!-- Logger -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -79,3 +79,328 @@
   </dependencies>
 
 </project>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<concept>
+  <active>true</active>
+  <lastModified>2014-12-08T17:32:02-08:00</lastModified>
+  <lastModifiedBy>loader</lastModifiedBy>
+  <moduleId>900000000000207008</moduleId>
+  <objectId></objectId>
+  <terminology>SNOMEDCT</terminology>
+  <terminologyVersion>20140731</terminologyVersion>
+  <anonymous>false</anonymous>
+  <childCount>8</childCount>
+  <defaultPreferredName>Bacterial sepsis</defaultPreferredName>
+  <definitionStatusId>900000000000073002</definitionStatusId>
+  <descriptionCount>8</descriptionCount>
+  <description>
+    <active>true</active>
+    <lastModified>2014-12-08T17:32:59-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>2</languageRefSetMemberCount>
+    <language>
+      <active>true</active>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId></objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000548007</acceptabilityId>
+    </language>
+    <language>
+      <active>true</active>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId></objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000548007</acceptabilityId>
+    </language>
+    <term>Bacterial sepsis XXX (disorder)</term>
+    <typeId>900000000000003001</typeId>
+  </description>
+  <description>
+    <active>true</active>
+    <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+    <lastModified>2014-12-08T17:32:41-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>1</languageRefSetMemberCount>
+    <language>
+      <active>true</active>
+      <effectiveTime>2014-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>16697</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>9f7b935e-fc3d-5b4b-8174-274a38cfa459</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <term>Bacterial septicaemia</term>
+    <typeId>900000000000013009</typeId>
+  </description>
+  <description>
+    <active>true</active>
+    <lastModified>2014-12-08T17:32:34-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>2</languageRefSetMemberCount>
+    <language>
+      <active>true</active>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId></objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000548007</acceptabilityId>
+    </language>
+    <language>
+      <active>true</active>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId></objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000548007</acceptabilityId>
+    </language>
+    <term>Bacterial sepsis XXX</term>
+    <typeId>900000000000013009</typeId>
+  </description>
+  <description>
+    <active>false</active>
+    <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+    <lastModified>2014-12-08T17:32:34-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>2</languageRefSetMemberCount>
+    <language>
+      <active>false</active>
+      <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2002-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11904</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>32196890-79f1-5654-ba83-a2ff74f0ab18</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <language>
+      <active>false</active>
+      <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2002-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11905</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>a169055a-2348-51fb-9f69-c0e4b03a3fe3</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <term>Bacterial sepsis, NOS</term>
+    <typeId>900000000000013009</typeId>
+  </description>
+  <description>
+    <active>true</active>
+    <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+    <lastModified>2014-12-08T17:32:34-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>1</languageRefSetMemberCount>
+    <language>
+      <active>true</active>
+      <effectiveTime>2014-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11901</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>5e12fd43-e99b-55a5-a51d-f29157f89bca</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <term>Bacterial septicemia</term>
+    <typeId>900000000000013009</typeId>
+  </description>
+  <description>
+    <active>false</active>
+    <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+    <lastModified>2014-12-08T17:32:34-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>2</languageRefSetMemberCount>
+    <language>
+      <active>false</active>
+      <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2002-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11909</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>4a8d33c0-163d-5d58-92d9-d45ecfb8e0b2</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <language>
+      <active>false</active>
+      <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2002-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11908</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>5c8e87f1-8948-5eea-8b28-d3e7f15ea776</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <term>Bacteremia, NOS</term>
+    <typeId>900000000000013009</typeId>
+  </description>
+  <description>
+    <active>false</active>
+    <effectiveTime>2014-01-31T00:00:00-08:00</effectiveTime>
+    <lastModified>2014-12-08T17:33:20-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>2</languageRefSetMemberCount>
+    <language>
+      <active>false</active>
+      <effectiveTime>2014-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>45568</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>5b770e30-537a-5761-b280-776c31c43de2</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000548007</acceptabilityId>
+    </language>
+    <language>
+      <active>false</active>
+      <effectiveTime>2014-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2014-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>45569</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>e5708b31-364e-5273-b89f-4d67aab6f9b3</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000548007</acceptabilityId>
+    </language>
+    <term>Bacterial septicemia (disorder)</term>
+    <typeId>900000000000003001</typeId>
+  </description>
+  <description>
+    <active>false</active>
+    <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+    <lastModified>2014-12-08T17:32:34-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <caseSignificanceId>900000000000020002</caseSignificanceId>
+    <languageCode>en</languageCode>
+    <languageRefSetMemberCount>2</languageRefSetMemberCount>
+    <language>
+      <active>false</active>
+      <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2002-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11903</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>e2c35005-8b34-5f51-9791-762cbcac2387</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000508004</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <language>
+      <active>false</active>
+      <effectiveTime>2002-01-31T00:00:00-08:00</effectiveTime>
+      <lastModified>2002-01-31T00:00:00-08:00</lastModified>
+      <lastModifiedBy>loader</lastModifiedBy>
+      <moduleId>900000000000207008</moduleId>
+      <objectId>11902</objectId>
+      <terminology>SNOMEDCT</terminology>
+      <terminologyId>e4a1e3c0-8ed5-5128-bf35-23996165505e</terminologyId>
+      <terminologyVersion>20140731</terminologyVersion>
+      <refSetId>900000000000509007</refSetId>
+      <acceptabilityId>900000000000549004</acceptabilityId>
+    </language>
+    <term>Bacterial septicemia, NOS</term>
+    <typeId>900000000000013009</typeId>
+  </description>
+  <relationshipCount>16</relationshipCount>
+  <relationship>
+    <active>true</active>
+    <lastModified>2014-12-08T17:34:35-08:00</lastModified>
+    <lastModifiedBy>loader</lastModifiedBy>
+    <moduleId>900000000000207008</moduleId>
+    <objectId></objectId>
+    <terminology>SNOMEDCT</terminology>
+    <terminologyVersion>20140731</terminologyVersion>
+    <characteristicTypeId>900000000000010007</characteristicTypeId>
+    <destinationId>17771</destinationId>
+    <destinationPreferredName>Bacterial sepsis</destinationPreferredName>
+    <destinationTerminologyId>10001005</destinationTerminologyId>
+    <modifierId>900000000000451002</modifierId>
+    <relationshipGroup>0</relationshipGroup>
+    <typeId>116680003</typeId>
+  </relationship>
+  <workflowStatus>PUBLISHED</workflowStatus>
+</concept>
